--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -3,3 +3,12 @@
 @import "bourbon";
 @import "base/base";   /* Bitters needs to be imported before Neat */
 @import "neat";
+
+@import "partials/nav";
+@import "partials/footer";
+@import "partials/layout";
+
+
+#wrapper {
+    @include outer-container;
+}
