--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -8,14 +8,10 @@
 <html lang="es-ES">
 <!--<![endif]-->
 <head>
-	<!--[if IE]><![endif]-->
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<!--[if IE]>
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-	<![endif]-->
-
-	<title><%= current_page.data.title || "Sample Page" %></title>
+  <meta http-equiv='X-UA-Compatible' content='IE=edge;chrome=1' />
+  <title>Blog Title<%= ' - ' + current_article.title unless current_article.nil? %></title>
+  <%= feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed" %>
 	<link href='http://fonts.googleapis.com/css?family=Work+Sans' rel='stylesheet' type='text/css'>
 	<%= stylesheet_link_tag "normalize", "all" %>
 	<%= yield_content :styles %>
@@ -28,7 +24,7 @@
 		jQuery('body:not(.js)').addClass('js');
 	</script>
 
-	<div id="wrapper">
+	<div id="main" role="main">
 		<%= partial "partials/nav" %>
 		<%= yield %>
 		<%= partial "partials/footer" %>
