--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -13,8 +13,10 @@ per_page: 10
 <ul>
   <% page_articles.each_with_index do |article, i| %>
     <li>
-      <h3><%= link_to article.title, article %></h3>
-      <h5><%= article.date.strftime('%b %e') %></h5>
+      <h3>
+        <%= link_to article.title, article %>
+        <small><%= article.date.strftime('%b %e') %></small>
+      </h3>
       <p><%= article.body %></p>
     </li>
   <% end %>
