--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -10,9 +10,10 @@
 <head>
 	<meta charset="utf-8" />
   <meta http-equiv='X-UA-Compatible' content='IE=edge;chrome=1' />
-  <title>Blog Title<%= ' - ' + current_article.title unless current_article.nil? %></title>
+  <title>Drexel Biomed Dev Blog<%= ' - ' + current_article.title unless current_article.nil? %></title>
   <%= feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed" %>
 	<link href='http://fonts.googleapis.com/css?family=Work+Sans' rel='stylesheet' type='text/css'>
+	<link rel="shortcut icon" href="#{http_prefix}images/FavIcon.ico">
 	<%= stylesheet_link_tag "normalize", "all" %>
 	<%= yield_content :styles %>
 
